force-app/main/default/objects/Prometheion_Connected_Org__c/Prometheion_Connected_Org__c.object-meta.xml
<CustomObject>
    <description>Stores connected Salesforce org information for multi-org compliance management</description>
    <label>Prometheion Connected Org</label>
    <nameField>
        <label>Connected Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prometheion Connected Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>