force-app/main/default/objects/Prometheion_Connected_Org__c/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Production</fullName><default>false</default><label>Production</label></value>
            <value><fullName>Sandbox</fullName><default>false</default><label>Sandbox</label></value>
            <value><fullName>Developer</fullName><default>false</default><label>Developer</label></value>
            <value><fullName>Scratch</fullName><default>false</default><label>Scratch Org</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>