force-app/main/default/objects/Prometheion_Connected_Org__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>US</fullName><default>true</default><label>United States</label></value>
            <value><fullName>EU</fullName><default>false</default><label>Europe</label></value>
            <value><fullName>APAC</fullName><default>false</default><label>Asia Pacific</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>